--- a/SpaceStationSystem/SpaceStationSystem.csproj
+++ b/SpaceStationSystem/SpaceStationSystem.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Amphibian.cs" />
+    <Compile Include="Crew.cs" />
+    <Compile Include="Human.cs" />
+    <Compile Include="Mega.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
