--- a/SpaceStationSystem/SpaceStationSystem.csproj
+++ b/SpaceStationSystem/SpaceStationSystem.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Human.cs" />
     <Compile Include="Mega.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgressBar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -61,6 +62,7 @@
     <Compile Include="Service.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="SpaceStation.cs" />
+    <Compile Include="TimeCycles.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
